--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "node start.js",
-    "dev" : "nodemon start.js"
+    "start": "node start.js",
+    "dev": "nodemon start.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/register": "^7.22.15",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
