--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/register": "^7.22.15",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "slugify": "^1.6.6",
+    "uniqid": "^5.4.0"
   }
 }
